--- a/php5.3.3/Dockerfile
+++ b/php5.3.3/Dockerfile
@@ -1,28 +1,19 @@
-FROM httpd:2.2
+FROM alpine:3.3
 
-# Install persistent reqs
-RUN apt-get update && apt-get install -y ca-certificates curl librecode0 libsqlite3-0 libxml2 --no-install-recommends && rm -r /var/lib/apt/lists/*
+# Set up the repo and runtime deps
+RUN echo "@edge http://nl.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories
+RUN apk add -U apache2 curl curl-dev libxml2-dev readline-dev recode-dev@edge
 
 # Set up environment vars
 ENV PHP_INI_DIR /usr/local/etc/php
-ENV buildDeps "autoconf \
+ENV buildDeps "apache2-dev \
 	file \
 	g++ \
 	gcc \
 	libc-dev \
 	make \
-	pkg-config \
-	re2c \
-	libcurl4-openssl-dev \
-	libreadline6-dev \
-	librecode-dev \
-	libsqlite3-dev \
-	libssl-dev \
-	libxml2-dev \
-	libz-dev \
-	lbzip2 \
 	patch"
-ENV PHP_EXTRA_CONFIGURE_ARGS --with-apxs2=/usr/local/apache2/bin/apxs
+ENV PHP_EXTRA_CONFIGURE_ARGS --with-apxs2=/usr/bin/apxs
 ENV PHP_VERSION 5.3.3
 ENV PHP_FILENAME php-5.3.3.tar.bz2
 ENV PHP_SHA256 f2876750f3c54854a20e26a03ca229f2fbf89b8ee6176b9c0586cb9b2f0b3f9a
@@ -36,12 +27,14 @@ COPY libxml.patch /usr/src/php/
 
 # Compile and install
 RUN set -x \
-	&& apt-get update && apt-get install -y $buildDeps --no-install-recommends \
-	&& curl -fSL "http://museum.php.net/php5/$PHP_FILENAME" -o "$PHP_FILENAME" \
+	&& apk add $buildDeps \
+	&& curl -L "http://museum.php.net/php5/$PHP_FILENAME" -o "$PHP_FILENAME" \
 	&& echo "$PHP_SHA256 *$PHP_FILENAME" | sha256sum -c - \
-	&& tar -xf "$PHP_FILENAME" -C /usr/src/php --strip-components=1 \
+	&& tar -xjf "$PHP_FILENAME" -C /usr/src/php/ \
 	&& rm "$PHP_FILENAME"* \
 	&& cd /usr/src/php \
+	&& mv php-5.3.3/* . \
+	&& rm -rf php-5.3.3 \
 	&& patch -p0 < libxml.patch \
 	&& ./configure \
 			--with-config-file-path="$PHP_INI_DIR" \
@@ -55,15 +48,11 @@ RUN set -x \
 			--with-zlib \
 			--with-pdo-mysql=mysqlnd \
 	&& echo "EXTRA_LIBS += -lcrypto" >> Makefile \
-	&& make -j"$(nproc)" \
+	&& make \
 	&& make install \
-	&& { find /usr/local/bin /usr/local/sbin -type f -executable -exec strip --strip-all '{}' + || true; } \
 	&& make clean \
-	&& apt-get purge -y --auto-remove \
-		-o APT::AutoRemove::RecommendsImportant=false \
-		-o APT::AutoRemove::SuggestsImportant=false \
-		$buildDeps \
-		&& cd \
+	&& apk del $buildDeps \
+	&& cd \
 	&& rm -rf /usr/src/php/
 
 # Set up the PHP timezone
@@ -71,16 +60,20 @@ RUN echo "date.timezone=America/Toronto" >> /usr/local/etc/php/php.ini
 
 # Add PHP support to httpd
 COPY httpd_php.conf .
-RUN cat httpd_php.conf >> /usr/local/apache2/conf/httpd.conf \
-	&& rm httpd_php.conf
+RUN cat httpd_php.conf >> /etc/apache2/httpd.conf \
+	&& rm httpd_php.conf \
+	&& sed -i 's|LoadModule.*libphp5.so|LoadModule php5_module /usr/lib/apache2/libphp5.so|' /etc/apache2/httpd.conf
 
 # Set workdir to the docroot, add our test index page.
-WORKDIR /usr/local/apache2/htdocs/
+WORKDIR /var/www/localhost/htdocs/
 ADD index.php .
 RUN rm -f index.html
 
 # Create the entrypoint
 COPY apache2-foreground /usr/local/bin/
+
+# Set up the needed PID dir
+RUN mkdir /run/apache2/
 
 # Expose port, run
 EXPOSE 80
